[project]
name = "pyvec-docs"
version = "0"
requires-python = "==3.12.*"
dependencies = [
    "click==8.2.1",
    "jinja2==3.1.6",
    "myst-parser==4.0.1",
    "pydantic==2.11.9",
    "requests==2.32.5",
    "sphinx-rtd-theme==3.0.2",
    "sphinx==8.2.3",
    "sphinxemoji==0.3.1",
]

[project.scripts]
pyvec-docs = "pyvec_docs.cli:main"

[dependency-groups]
dev = [
    "pytest-ruff==0.5",
    "pytest==8.4.2",
    "sphinx-autobuild==2025.8.25",
]

[build-system]
requires = ["uv_build>=0.7.3,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--ff --ruff --ruff-format"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
