[project]
name = "pyvec-docs"
version = "0"
requires-python = "==3.12.*"
dependencies = [
    "click>=8.3.2",
    "jinja2>=3.1.6",
    "myst-parser>=5.0.0",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx<10",  # see https://github.com/executablebooks/MyST-Parser/issues/1077
    "sphinxemoji>=0.3.2",
]

[project.scripts]
pyvec-docs = "pyvec_docs.cli:main"

[dependency-groups]
dev = [
    "pytest-ruff>=0.5",
    "pytest>=9.0.3",
    "sphinx-autobuild>=2025.8.25",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--ff --ruff --ruff-format"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
